/***********************************************************************
X3 ChangeLog

2007-05-08  Alex Schumann  <rubin@afternet.org>

        * src/nickserv.c: fix authentication bug with ldap by temporarily
	removing account-less authentication.

	* src/nickserv.help: fix help file to reflect change

2007-05-08  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/mod-webtv.c: Allow opers to override required_mark. Also added
	SJOIN (undocumented) so opers can join IRC into channels where its
	needed as WebTV can only message clients in channels they are in.

2007-06-08  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/mod-webtv.c: Added JOIN and PART.

	* src/mod-webtv.help: Added JOIN and PART.

2007-05-08  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/mod-webtv.c: Added NICK and WHOIS commands. As well as 2 x3.conf
	config options, required_mark and valid_marks.

	* src/mod-webtv.help: Added INDEX, NICK, and WHOIS.

2007-05-08  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* configure: Run autogen.sh.

	* configure.in: Tweaks for google core dumper 1.1.

	* x3.conf.example: Basic webtv module section.

	* src/config.h.in: Run autogen.sh.

	* src/Makefile.am: Run autogen.sh.

	* src/Makefile.in: Run autogen.sh.

	* src/mod-webtv.c: Basic module for now. (Does nothing so dont
	bother compiling in).

	* src/mod-webtv.help: Empty help file for webtv module.

	* tools/core_install.sh: Update google core dumper to 1.1.

	* tools/coredumper.tar.gz: Update google core dumper to 1.1.

2007-05-06  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/proto-p10.c: Quick fix (as its 12:11am and i have work at 8:30am).
	This will stop the "Unable to find user irc.servername.com whose mark 
	is changing." messages. When a user reconnects and an existing exempt
	is on the network for the user, their lastseen time is sent out to
	all the servers. This quick fix moves the user checking part to
	the relevant part of the function that actually uses users.
